# sessions

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.fr.md  README.md  ROADMAP.md  deny.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  design_discussion.md  docs_issue.md  fixture_request.md
.github/workflows/: ci.yml  context-hygiene.yml  harness-incident.yml  security.yml
crates/app/: Cargo.toml  Dioxus.toml  README.md  index.html
crates/app/src/: lib.rs  main.rs  owner.css
crates/core/: Cargo.toml
crates/core/src/: api.rs  biscuit_token.rs  client.rs  fixtures.rs  guest_join.rs  lib.rs  protocol.rs  role_assignment.rs
crates/join/: Cargo.toml  Dioxus.toml  index.html
crates/join/src/: join.css  lib.rs  main.rs
crates/rag/: Cargo.toml
crates/rag/migrations/: 01_init_sessions.sql  02_add_role_assignment_tracking.sql  20260709000001_init_source_refs.sql
crates/rag/src/: clarify.rs  corpus.rs  flashcards.rs  generate.rs  ingest.rs  lib.rs  pipeline.rs  provider.rs  verify.rs
crates/rag/tests/: corpus_pgvector.rs  live_provider.rs
crates/server/: Cargo.toml  build.rs
crates/server/assets/: approved-owner-upload.md
crates/server/examples/: custom_scoring_hook.rs
crates/server/migrations/: 0001_jobs_and_outbox.sql
crates/server/src/: approved_claims.rs  auth.rs  authz.rs  classification.rs  fanout.rs  flashcard_store.rs  grounded_fixtures.rs  http.rs  ingestion.rs  integrity.rs  jobs.rs  lib.rs  main.rs  membership.rs  notebook_rag.rs  oidc.rs  owner_auth.rs  owner_corpus.rs  owner_corpus_http.rs  postgres_jobs.rs  postgres_store.rs  quiz.rs  rag_query.rs  ratelimit.rs  redis_fanout.rs  registry.rs  scoring.rs  session.rs  session_identity.rs  store.rs  ws.rs
crates/server/src/middleware/: biscuit_auth.rs  mod.rs
crates/server/static/: app.js  index.html
crates/server/static/owner-app/: index.html
crates/server/static/owner-app/assets/: focus-trap-dxhdcfef9c6747d67.js  rumble-lm-app-dxh6d6c16d8bb5fc369.js  rumble-lm-app_bg-dxhaada6cfbcb3931b2.wasm
crates/server/tests/: flashcard_store_pg.rs  generate_question.rs  ingest.rs  integration_ai_practices_scoring_consumption.rs  integration_cross_repo_biscuit_fixture.rs  integration_live_question_grounding_contract.rs  integration_postgres_redis.rs  integration_workspace_identity_biscuit_contract.rs  leaderboard_concurrency.rs  live_rag.rs  load.rs  postgres_jobs.rs  postgres_multi_instance.rs  postgres_store.rs  provider_http.rs  real_source_grounding.rs  redis_multi_instance.rs  scoring_hook.rs  slo_generation.rs  store_divergence.rs  web_session.rs  wrench_evidence_validation.rs  ws_integration.rs
crates/ui/: Cargo.toml  README.md
crates/ui/examples/: spike_web.rs
crates/ui/fixtures/portal/: contrast-report.json  manifest.json  tokens.css
crates/ui/src/: components.css  lib.rs  portal-bridge.css  themes.css
dev/keycloak/: README.md  compose.yml  realm-rumble-lm.json
docs/: README.md  e2e-testing.md  product-readiness.md  pwa-testing.md  scoring-hook-pattern.md
docs/adr/: 0001-product-architecture-and-boundaries.md  0002-mobile-first-webview-rust-core.md  0003-companion-repositories.md  0004-local-jobs-and-sovereign-provider-routing.md  0005-native-label-without-wasm-rewriting.md
docs/contracts/: live-question-grounding.v0.1.fixtures.json  live-question-grounding.v0.1.md  session-identity.v0.1.fixtures.json  session-identity.v0.1.md
docs/db/: jobs-manifest.json
docs/deploy/: clever-cloud.md
docs/evidence/: stack-traversal-2026-07-13.md
docs/evidence/stack-traversal-2026-07-13/: agent-factory-dry-run.json  artifact-manifest.json  db-inspection.json  proof-kit-ui.json
docs/evolution/: 2026-06-28-evolution-and-hardening-spec.md
docs/goals/: 2026-06-28-session-spec-coverage.md
docs/handoff/: lm-slice-handoff.json
docs/plans/: 2026-06-27-p3-tracer-bullet.md  2026-07-lm-session-runtime.md  2026-07-lm-ui-lab-alignment-and-dod-slice.md  2026-07-mobile-webview-mvp-rebaseline.md
docs/security/: approved-notebook-claims.md  legacy-ingestion.md  live-join-links.md  owner-corpus.md  owner-web-auth.md  rag-exact-evidence-gate.md
docs/sources/: rust-ownership-guide.md
docs/specs/: 2026-06-27-presto-matic-design.md  2026-06-28-collaborative-spaces-authz-design.md  2026-06-28-frontend-dioxus-design-system-design.md
docs/spikes/: dioxus-web-shell.md
docs/status/: 2026-06-29-session-handoff.md
e2e/: .env.example  .gitignore  package-lock.json  package.json  playwright.config.ts
e2e/tests/: guest.spec.ts  owner-auth-keycloak.spec.ts  owner-corpus.spec.ts  owner-notebook.spec.ts  owner-shell.spec.ts  pwa-smoke.spec.ts  pwa.spec.ts  session.spec.ts
scripts/: build-join-app.sh  build-owner-app.sh  clever-pre-build.sh  clever-smoke.sh  clever-staging-preflight.sh  finalize-join-app.py  finalize-owner-app.py  generate-stack-proof.sh  install-join-app.sh  install-owner-app.sh  keycloak-dev.sh  owner-sw-register.js  package-join-app.sh  package-owner-app.sh  test-clever-pre-build.sh  test-clever-smoke.sh  test-clever-staging-preflight.sh  test-join-app-reproducible.sh  test-owner-app-package.sh  test-owner-app-reproducible.sh  verify-join-app.sh  verify-owner-app.sh
scripts/fixtures/: clever-tools-staging.json
