[workspace]
resolver = "3"
members = ["crates/core", "crates/rag", "crates/server", "crates/ui"]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/constantin-jais/Presto-Matic"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
presto-core = { path = "crates/core" }
presto-rag = { path = "crates/rag" }
rumble-lm-ui = { path = "crates/ui" }
dioxus = { version = "0.7", default-features = false, features = ["macro", "html", "signals"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
strip = true
lto = "thin"
