[workspace]
resolver = "3"
members = ["crates/core", "crates/rag", "crates/server", "crates/ui"]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/libre-ai/sessions"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
presto-core = { path = "crates/core" }
presto-rag = { path = "crates/rag" }
rumble-lm-ui = { path = "crates/ui" }
dioxus = { version = "0.7", default-features = false, features = ["macro", "html", "signals"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde", "formatting", "macros"] }
gear-loader = { git = "https://github.com/libre-ai/gear", rev = "3e269c2497fee0c1c486058200e685c163af3816" }
gear-memory = { git = "https://github.com/libre-ai/gear", rev = "3e269c2497fee0c1c486058200e685c163af3816", default-features = false }

[profile.release]
strip = true
lto = "thin"
