[package]
name = "rumble-lm-app"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "rumble_lm_app"
path = "src/lib.rs"

[[bin]]
name = "rumble-lm-app"
path = "src/main.rs"

[features]
default = ["web"]
web = ["dioxus/web"]

[dependencies]
dioxus = { workspace = true, features = ["router"] }
presto-core.workspace = true
rumble-lm-ui.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-history = "0.7"
dioxus-web = { version = "0.7", default-features = false, features = ["document"] }
gloo-net = { version = "0.6", default-features = false, features = ["http", "json"] }

[dev-dependencies]
dioxus-ssr = "0.7"
