[package]
name = "presto-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "presto_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
serde_json.workspace = true
