[package]
name = "presto-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "presto_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
uuid.workspace = true
chrono.workspace = true

# uuid v4 needs an explicit randomness source on wasm32 (same fix as
# rumble-feed-mind#14); target-scoped so native builds are untouched.
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["js"] }

[dev-dependencies]
serde_json.workspace = true
