[package]
name = "rumble-lm-join"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "rumble_lm_join"
path = "src/lib.rs"

[[bin]]
name = "rumble-lm-join"
path = "src/main.rs"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
presto-core.workspace = true
rumble-lm-ui.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-history = "0.7"
dioxus-web = { version = "0.7", default-features = false, features = ["document"] }
futures-util = "0.3.32"
gloo-net = { version = "0.6", default-features = false, features = ["http", "json", "websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
urlencoding = "2.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location", "History", "WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent"] }

[dev-dependencies]
dioxus-ssr = "0.7"
