[package]
name = "presto-server"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "presto_server"
path = "src/lib.rs"

[[bin]]
name = "presto-server"
path = "src/main.rs"

[[bin]]
name = "emit-artifact-manifest"
path = "src/bin/emit-artifact-manifest.rs"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "macros", "sync", "time"] }
presto-core.workspace = true
presto-rag.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot = "0.12.5"
biscuit-auth = "6.0.0"
# Pure-Rust crypto backend (rust_crypto: hmac/rsa/p256/ed25519) — avoids `ring`,
# stays sovereign + permissively licensed. Validates OIDC id_tokens (SP-A inc-1).
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
# Keyed content-integrity tags (HMAC-SHA256) for the SP-B grounding moat.
hmac = "0.13"
sha2 = "0.11"
async-trait.workspace = true
redis = { version = "1.2.4", features = ["tokio-comp", "aio"] }
futures-util = "0.3.32"
sqlx = { version = "0.9.0", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls", "migrate"] }
rand = "0.10.1"
gear-loader.workspace = true
uuid.workspace = true
chrono.workspace = true
time.workspace = true

[dev-dependencies]
futures-util = "0.3.32"
tokio-tungstenite = "0.29.0"
tower = { version = "0.5.3", features = ["util"] }
reqwest.workspace = true
