[package]
name = "presto-server"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "presto_server"
path = "src/lib.rs"

[[bin]]
name = "presto-server"
path = "src/main.rs"

[[bin]]
name = "emit-artifact-manifest"
path = "src/bin/emit-artifact-manifest.rs"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "macros", "sync", "time"] }
presto-core.workspace = true
presto-rag.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot = "0.12.5"
biscuit-auth = "6.0.0"
# Permissively licensed AWS-LC backend for local OIDC signature verification
# (SP-A inc-1): no AWS service or data flow, and no vulnerable RustCrypto RSA path.
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs", "use_pem"] }
# Keyed content-integrity tags (HMAC-SHA256) for the SP-B grounding moat.
hmac = "0.13"
sha2 = "0.11"
subtle = "2.6"
base64 = "0.22"
getrandom = "0.4"
reqwest.workspace = true
async-trait.workspace = true
redis = { version = "1.2.4", features = ["tokio-comp", "aio"] }
futures-util = "0.3.32"
sqlx = { version = "0.9.0", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls", "migrate"] }
rand = "0.10.1"
tracing.workspace = true
tracing-subscriber.workspace = true
gear-loader.workspace = true
gear-memory.workspace = true
uuid.workspace = true
chrono.workspace = true
time.workspace = true
tower = { version = "0.5.3", features = ["limit"] }

[build-dependencies]
serde_json.workspace = true
sha2 = "0.11"

[dev-dependencies]
futures-util = "0.3.32"
tokio-tungstenite = "0.30.0"
tower = { version = "0.5.3", features = ["util", "limit"] }
aws-lc-rs = "1.17.1"
tempfile = "3"
