[package]
name = "rumble-lm-ui"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "rumble_lm_ui"
path = "src/lib.rs"

[dependencies]
dioxus.workspace = true
presto-core.workspace = true
uuid.workspace = true

[dev-dependencies]
dioxus-ssr = "0.7"
